# vscodecppproject

./: CMakeLists.txt  example.xml  gen_compile_commands.bat  gen_compile_commands.sh  vcpkg-configuration.json
src/: main.cpp
